--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Aswini KP</title>
+    <title>Fish Export</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
       
 </head>
