--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   
   <div class="row">
         <div class="column">
-            <img src="C:\Users\akhil\Downloads\fishimage.png" width=600px height=580px />
+            <img src="images\fishimage.png" width=600px height=580px />
         </div>
         <div class="column frameimg">
-           <img  src="C:\Users\akhil\Downloads\Frame.png" width=60px height=60px />
+           <img  src="images\Frame.png" width=60px height=60px />
            </br>
            <h2 > Login</h2>
            <h4 class="welfontcolor">Welcome to oceanus</h4>
