--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
         <div class="column frameimg">
            <img  src="images\Frame.png" width=60px height=60px />
            </br>
-           <h2 > Login</h2>
+           <h2 > LOGIN</h2>
            <h4 class="welfontcolor">Welcome to oceanus</h4>
-           <p class="inputcolor">email</p>
-           <div class="hl"></div>
-           <p class="inputcolor">password</p>
-           <div class="hl"></div>
+
+          
+           <input  class"textbox" type="text" placeholder="Email" name="email">
+
+          </br>
+          </br>
+           <input  class"textbox" type="text" placeholder="Password"  name="password">
+
            </br>
-           
+           </br>
            <input type="checkbox" name="rememberme" >
            <label >remember me</label>
            <a class="forpass"href="" > Forget password </a>
@@ -42,5 +46,8 @@
 </body>
 </html>
 
-
+<!--
+ <p class="inputcolor">email</p>
+  <p class="inputcolor">password</p>
+-->
 
